public/css/global.css
html {
  font-size: 18px;
}

.text-sm {
  font-size: 1.1rem;
}

.text-sm-plus {
  font-size: 1.3rem;
}

.text-2x {
  font-size: 1.4rem;
}

.text-3x {
  font-size: 2rem;
}

.bold {
  font-weight: 700;
}

.light-gray {
  color: rgb(75 85 99);
}

.hidden {
  display: none;
}

main {
  padding: 1px;
  background-color: rgb(255, 187, 187);
}

.primary-button {
  background-color: #3838de;
  border: none;
  border-radius: 8px;
}

.primary-button a {
  text-decoration: none;
  color: white;
}

/* Add New button */
.add-button-holder {
  margin: 24px;
}

.add-button {
  height: 52px;
  width: 100%;
}

/* Cards */
.card {
  border: 2px solid rgb(225, 226, 227);
  border-radius: 16px;
  margin: 25px;
  padding: 18px 20px 16px 20px;
  background-color: rgb(249 250 251);
  box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
}

.card p {
  margin-top: 16px;
}

.edit-button {
  display: block;
  height: 36px;
  width: 80px;
  margin-left: auto;
}

/* CSS for partials */
/* header.ejs */
header {
  margin-top: 24px;
  text-align: center;
}

/* nav.ejs */
nav {
  position: relative;
  box-shadow: 0 5px 8px 0px rgb(190, 190, 190);
  padding-bottom: 8px;
}

nav a {
  display: flex;
  align-items: center;

  margin-left: 16px;
  text-decoration: none;
  color: black;
}

.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;

  height: 36px;
  margin-top: 24px;
}

.menu-button {
  display: flex;
  justify-content: center;

  height: 100%;
  background-color: white;
  border: none;
}

.menu-links {
  margin-top: 16px;
}

.menu-links > a {
  padding: 3px;
}

/* Form */
form {
  padding-bottom: 24px;
}

form .card {
  display: flex;
  flex-direction: column;
  padding-bottom: 24px;
}

form .card label {
  margin-top: 16px;
}

form select {
  min-height: 32px;
}

form #description {
  min-height: 180px;
  resize: vertical;
}

.form-button-holder {
  display: flex;
  justify-content: center;
  
  margin: 0 25px;
  gap: 12px;
}

.form-button-holder > * {
  flex: 1;

  height: 36px;
  border: none;
  border-radius: 8px;
}

.form-button-holder > button[type='submit'] {
  color: white;
  background-color: #3838de;
}

